WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69106
Universal attribute selectors disable style sharing
https://bugs.webkit.org/show_bug.cgi?id=69106
Summary
Universal attribute selectors disable style sharing
Antti Koivisto
Reported
2011-09-29 14:45:32 PDT
Selectors of type [foo="bar"] will end up marking every element style with the affectedByUncommonAttributeSelectors bit, rendering style sharing inoperative. This happens on
http://www.whatwg.org/specs/web-apps/current-work/
for example.
Attachments
patch
(20.07 KB, patch)
2011-09-29 15:00 PDT
,
Antti Koivisto
hyatt
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-09-29 14:46:30 PDT
affectedByAttributeSelectors bit I mean
Antti Koivisto
Comment 2
2011-09-29 15:00:45 PDT
Created
attachment 109209
[details]
patch
Antti Koivisto
Comment 3
2011-09-29 15:01:18 PDT
This speeds up style matching and applying ~15% on full HTML5 spec (=~0.7s). Sharing percentage goes from 0% to ~30%. Increased sharing should also save a substantial amount of memory.
Dave Hyatt
Comment 4
2011-09-29 15:04:22 PDT
Comment on
attachment 109209
[details]
patch r=me
WebKit Review Bot
Comment 5
2011-09-29 15:51:17 PDT
Comment on
attachment 109209
[details]
patch
Attachment 109209
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9901202
New failing tests: tables/mozilla/bugs/
bug222846
.html
Antti Koivisto
Comment 6
2011-09-30 00:07:11 PDT
http://trac.webkit.org/changeset/96393
(with a fix to the crashing test)
Alexey Proskuryakov
Comment 7
2012-06-06 15:12:44 PDT
This has caused
bug 88196
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug